--- a/index.html
+++ b/index.html
@@ -476,6 +476,7 @@
             <div class="contact-mf">
               <div id="contact" class="box-shadow-full">
                 <div class="row">
+                  <!-- 
                   <div class="col-md-6">
                     <div class="title-box-2">
                       <h5 class="title-left">
@@ -517,10 +518,11 @@
                       </form>
                     </div>
                   </div>
+                  -->
                   <div class="col-md-6">
                     <div class="title-box-2 pt-4 pt-md-0">
                       <h5 class="title-left">
-                        Get in Touch
+                        Contact
                       </h5>
                     </div>
                     <div class="more-info">
