--- a/index.html
+++ b/index.html
@@ -527,8 +527,7 @@
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Need to get in touch with us? Enter fill out the forms
-                        with your inquiry.
+                        Need to get in touch with us?
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> San Fernando,Pampanga(2000), Philippines</li>
