--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My portfolio</title>
+    <!-- Favicons -->
+    <link href="https://i.pinimg.com/originals/96/a3/cc/96a3cc4bd1bfc714c16d0942c0a03c26.png" rel="icon">
+    <link href="https:https://i.pinimg.com/originals/96/a3/cc/96a3cc4bd1bfc714c16d0942c0a03c26.png" rel="apple-touch-icon">
+    <!-- Bootstrap CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Sebastian Jabson</title>
 </head>
 <body>
-    <h1>Hello Hi</h1>
+    <nav class="navbar navbar-expand-lg navbar-light black-bg text-light py-4">
+        <a class="text-light navbar-brand font-weight-bold ml-5 pr-5" href="#">Sebastian Jabson</a>
+        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon text-light"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse gold-bg" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto mr-4 text-center ">
+            <li class="nav-item active">
+              <a class="nav-link text-light font-weight-bold" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light font-weight-bold" href="#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light font-weight-bold" href="#">Contact</a>
+              </li>
+          </ul>
+        </div>
+    </nav>
+
+    <div class="container-fluid gold-bg">
+        <img src="assets/img/scjbanner.png" class="img-fluid img" alt="Responsive image">
+        <div class="centered">
+            <h1 class="fed">Front-End <br> Developer</h1>
+        </div>
+    </div>
+    
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
