--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
             <h1 class="fed">Front-End <br> Developer</h1>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                Hi
+            </div>
+            <div class="col">
+                Hello   
+            </div>
+        </div>
+    </div>
     
 
 
