--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Sebastian Jabson</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light black-bg text-light py-4">
+    <nav class="navbar navbar-expand-lg navbar-light black-bg text-light py-4 sticky-top" id="homesection">
         <a class="text-light navbar-brand font-weight-bold ml-5 pr-5" href="#">Sebastian Jabson</a>
         <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon text-light"></span>
@@ -22,10 +22,10 @@
         <div class="collapse navbar-collapse gold-bg" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mr-4 text-center ">
             <li class="nav-item active">
-              <a class="nav-link text-light font-weight-bold" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link text-light font-weight-bold" href="#homesection">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light font-weight-bold" href="#">About</a>
+              <a class="nav-link text-light font-weight-bold" href="#AboutMe">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-light font-weight-bold" href="#">Contact</a>
@@ -34,20 +34,92 @@
         </div>
     </nav>
 
-    <div class="container-fluid gold-bg">
+    <div class="container-fluid container-fluid-1 gold-bg">
         <img src="assets/img/scjbanner.png" class="img-fluid img" alt="Responsive image">
         <div class="centered">
             <h1 class="fed">Front-End <br> Developer</h1>
+            <p class="hero-subtitle"><span class="typed" data-typed-items="Developer, Designer, Freelancer"></span></p>
         </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid black-bg my-1 " id="AboutMe">
         <div class="row">
-            <div class="col">
-                Hi
+            <div class="col ">
+                <h2 class="text-center text-light font-weight-bold">About Me</h2>
             </div>
-            <div class="col">
-                Hello   
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-7  gold-bg">
+                <h2 class="text-center text-light mt-3 text-uppercase">My Profile</h2>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm">
+                            <img src="assets/img/2x2.png" class="img-thumbnail rounded-circle" alt="">
+                        </div>
+                        <div class="col-sm">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col">
+                                        <h3 class="text-light mt-5 font-weight-light"><i class="fa-solid fa-address-card"></i> Name: Sebastian Jabson</h3>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <h3 class="text-light mt-2 font-weight-light"><i class="fa-solid fa-user"></i> Age: 22</h3></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <h3 class="text-light mt-2 font-weight-light"><i class="fa-solid fa-house"></i> Address: San Fernando,Pampanga</h3></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>       
+            </div>
+            <div class="col-sm bg-gray">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col">
+                            <h2 class="text-center mt-3 text-uppercase">Skills</h2>
+
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-2 mt-5">
+                                        <h3>HTML</h3>    
+                                    </div>
+                                    <div class="col ml-3 mt-5">
+                                        <div class="progress" style="height: 35px;">
+                                            <div class="progress-bar HTML gold-bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">100%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-2 mt-1">
+                                        <h3>CSS</h3>    
+                                    </div>
+                                    <div class="col ml-3 mt-1">
+                                        <div class="progress" style="height: 35px;">
+                                            <div class="progress-bar CSS gold-bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-2 mt-1">
+                                        <h3>JS</h3>    
+                                    </div>
+                                    <div class="col ml-3 mt-1">
+                                        <div class="progress" style="height: 35px;">
+                                            <div class="progress-bar JS gold-bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">50%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>          
             </div>
         </div>
     </div>
@@ -58,5 +130,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="https://kit.fontawesome.com/4dde1986c6.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
