--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <title>Sebastian Jabson</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light black-bg text-light py-4 sticky-top" id="homesection">
+    <div id="homesection"></div>
+    <nav class="navbar navbar-expand-lg navbar-light black-bg text-light py-4 sticky-top">
         <a class="text-light navbar-brand font-weight-bold ml-5 pr-5" href="#">Sebastian Jabson</a>
         <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon text-light"></span>
@@ -22,7 +23,7 @@
         <div class="collapse navbar-collapse gold-bg" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mr-4 text-center ">
             <li class="nav-item active">
-              <a class="nav-link text-light font-weight-bold" href="#homesection">Home</a>
+              <a class="nav-link text-light font-weight-bold" href="#homesection">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-light font-weight-bold" href="#AboutMe">About</a>
@@ -34,11 +35,17 @@
         </div>
     </nav>
 
-    <div class="container-fluid container-fluid-1 gold-bg">
+    <div class="container-fluid container-fluid-1 gold-bg"  >
         <img src="assets/img/scjbanner.png" class="img-fluid img" alt="Responsive image">
         <div class="centered">
-            <h1 class="fed">Front-End <br> Developer</h1>
-            <p class="hero-subtitle"><span class="typed" data-typed-items="Developer, Designer, Freelancer"></span></p>
+            <h1 class="fed">Front-End <br> Developer </h1>
+            <h2 class="typing">
+                <span
+                class="txt-rotate typing"
+                data-period="2000"
+                data-rotate='[  "HTML", "CSS", "Javascript", "JQuery" ]'>
+                </span>
+            </h2>
         </div>
     </div>
 
@@ -113,6 +120,26 @@
                                     <div class="col ml-3 mt-1">
                                         <div class="progress" style="height: 35px;">
                                             <div class="progress-bar JS gold-bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">50%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-2 mt-1">
+                                        <h3>JQuery</h3>    
+                                    </div>
+                                    <div class="col ml-3 mt-1">
+                                        <div class="progress" style="height: 35px;">
+                                            <div class="progress-bar JS gold-bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">50%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-2 mt-1">
+                                        <h3>AJAX</h3>    
+                                    </div>
+                                    <div class="col ml-3 mt-1">
+                                        <div class="progress" style="height: 35px;">
+                                            <div class="progress-bar AJAX gold-bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">30%</div>
                                         </div>
                                     </div>
                                 </div>
