--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
               <a class="nav-link text-light font-weight-bold" href="#AboutMe">About</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link text-light font-weight-bold" href="#services">Services</a>
+              </li>
+            <li class="nav-item">
                 <a class="nav-link text-light font-weight-bold" href="#">Contact</a>
               </li>
           </ul>
         </div>
     </nav>
-
+    
     <div class="container-fluid container-fluid-1 gold-bg"  >
         <img src="assets/img/scjbanner.png" class="img-fluid img" alt="Responsive image">
         <div class="centered">
@@ -48,8 +51,10 @@
             </h2>
         </div>
     </div>
+    <!-- For Scroll -->
+    <div id="AboutMe"></div>
 
-    <div class="container-fluid black-bg my-1 " id="AboutMe">
+    <div class="container-fluid black-bg my-1 ">
         <div class="row">
             <div class="col ">
                 <h2 class="text-center text-light font-weight-bold">About Me</h2>
@@ -63,8 +68,8 @@
                 <h2 class="text-center text-light mt-3 text-uppercase">My Profile</h2>
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm">
-                            <img src="assets/img/2x2.png" class="img-thumbnail rounded-circle" alt="">
+                        <div class="col-sm text-center">
+                            <img src="assets/img/2x2.png" class="img-thumbnail rounded-circle twobytwo" alt="">
                         </div>
                         <div class="col-sm">
                             <div class="container-fluid">
@@ -80,6 +85,10 @@
                                 <div class="row">
                                     <div class="col">
                                         <h3 class="text-light mt-2 font-weight-light"><i class="fa-solid fa-house"></i> Address: San Fernando,Pampanga</h3></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col pb-5">
+                                        <h3 class="text-light mt-2 font-weight-light"><i class="fa-solid fa-cake-candles"></i> Birthday: September 07,1999</h3></div>
                                 </div>
                             </div>
                         </div>
@@ -147,6 +156,14 @@
                         </div>
                     </div>
                 </div>          
+            </div>
+        </div>
+    </div>
+    
+    <div class="container-fluid black-bg my-1 " id="services">
+        <div class="row">
+            <div class="col ">
+                <h2 class="text-center text-light font-weight-bold">Services</h2>
             </div>
         </div>
     </div>
