--- a/index.html
+++ b/index.html
@@ -167,7 +167,34 @@
             </div>
         </div>
     </div>
-    
+
+    <div id="carouselExampleIndicators" class="carousel slide car" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner  black-bg">
+          <div class="carousel-item active carpic">
+            <img class="d-block w-100" src="assets/img/graphic.png" alt="First slide">
+          </div>
+          <div class="carousel-item carpic">
+            <img class="d-block w-100" src="assets/img/webdesign.png" alt="Second slide">
+          </div>
+          <div class="carousel-item carpic">
+            <img class="d-block w-100" src="assets/img/frontendcode.png" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon text-dark" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+        
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
