--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-2 mt-1">
+                                    <div class="col-2 mt-1 mb-5">
                                         <h3>AJAX</h3>    
                                     </div>
                                     <div class="col ml-3 mt-1">
