--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="row">
             <div class="col-md mt-4">
                 <!-- My Work -->
-                <a href="" class="text-decoration-none text-black">
+                <a href="pages/ciras.html" class="text-decoration-none text-black">   
                     <div class="container-fluid">
                         <!-- Picture -->
                         <div class="row">
@@ -200,7 +200,7 @@
             </div>
             <div class="col-md mt-4">
                 <!-- My Work -->
-                <a href="" class="text-decoration-none text-black">
+                <a href="pages/relay.html" class="text-decoration-none text-black">
                     <div class="container-fluid">
                         <!-- Picture -->
                         <div class="row">
@@ -225,7 +225,7 @@
             </div>
             <div class="col-md mt-4">
                 <!-- My Work -->
-                <a href="" class="text-decoration-none text-black">
+                <a href="pages/resqueue.html" class="text-decoration-none text-black">
                     <div class="container-fluid">
                         <!-- Picture -->
                         <div class="row">
@@ -252,7 +252,7 @@
         <div class="row">
             <div class="col-md mt-2 mb-4">
                 <!-- My Work -->
-                <a href="" class="text-decoration-none text-black ">
+                <a href="pages/ecomerce.html" class="text-decoration-none text-black ">
                     <div class="container-fluid">
                         <!-- Picture -->
                         <div class="row">
@@ -321,14 +321,14 @@
 
     <div class="container-fluid black-bg mt-1 ">
         <div class="row">
-            <div class="col-md-8 mt-3">
+            <div class="col-md-8 mt-4">
                 <h2 class="text-light font-weight-bold gold-bg text-responsive pl-5">Sebastian Jabson</h2>
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col mt-4">
-                            <p class="text-light text-justify">Dedicated to creating websites and graphic design to help businesses grow. <br>
+                            <p class="text-light text-justify">Dedicated to creating websites and graphic design to help businesses grow. <br><br>
 
-                            With 1 year of experience, I am Specializes in earning the trust of others. As a Developer, I mainly worked for small- to medium-sized companies in the technology sector. Throughout of my career. I am a starter trying to build a strong record in developing websites and creating a good design. <br>
+                            With 1 year of experience, I am Specializes in earning the trust of others. As a Developer, I mainly worked for small- to medium-sized companies in the technology sector. Throughout of my career. I am a starter trying to build a strong record in developing websites and creating a good design. <br><br>
                                 
                             I have a Bachelor of Science in Information Technolgy from Our Lady of Fatima University. I enjoys meeting new people and learning about their lives and backgrounds. I'm always curious in everything and find ways to solve every in every problem i encounter as a developer towards to great inovations.</p>
                         </div>
