--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="homesection"></div>
     <nav class="navbar navbar-expand-lg navbar-light black-bg text-light py-4 sticky-top">
-        <a class="text-light navbar-brand font-weight-bold ml-5 pr-5" href="#">Sebastian Jabson</a>
+        <a class="text-light navbar-brand font-weight-bold ml-5 pr-5" href="../index.html">Sebastian Jabson</a>
         <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon text-light"></span>
         </button>
