--- a/pages/ciras.html
+++ b/pages/ciras.html
@@ -17,7 +17,7 @@
 <body>
     <div id="homesection"></div>
     <nav class="navbar navbar-expand-lg navbar-light black-bg text-light py-4 sticky-top">
-        <a class="text-light navbar-brand font-weight-bold ml-5 pr-5" href="#">Sebastian Jabson</a>
+        <a class="text-light navbar-brand font-weight-bold ml-5 pr-5" href="../index.html">Sebastian Jabson</a>
         <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon text-light"></span>
         </button>
@@ -87,7 +87,6 @@
                             </h4>
                             <p class="text-justify">
                                 The Crime Information and Reporting Analysis System is one of the solution for the Philippine National Police of Santo Tomas Pampanga and the victims or the residents. The system will make the work easy and efficient and decrease the number of unreported crime by creating an online system which the complainant doesn’t need to go to the police station. It will also help the police to quickly take action to a crime as soon as possible by providing a map of the locality in which they can view and analyze the place where crimes mostly took place. This will also alert and update residents regarding the missing, most wanted and other status with the system. To sum it up the crime information reporting and analysis system will give a solution to the police of Santo Tomas Pampanga and the complainant of the community in better and structured way of managing the crime.
-
                             </p>
                         </div>
                     </div>
