--- a/pages/ecomerce.html
+++ b/pages/ecomerce.html
@@ -88,7 +88,7 @@
                             <p class="text-justify">
                                 This Web design i created it using figma since I want to create my own ecommerce store so I started it using figma
                             </p>
-                            <p>Link:</p><a href="https://www.figma.com/file/58G9sQxn2z7poMP3LtvAQ4/SCJ-Ecommerce?node-id=0%3A1">https://www.figma.com/file/58G9sQxn2z7poMP3LtvAQ4/SCJ-Ecommerce?node-id=0%3A1</a>
+                            <p>Link:</p><a href="https://www.figma.com/proto/58G9sQxn2z7poMP3LtvAQ4/SCJ-Ecommerce?node-id=102%3A13&scaling=min-zoom&page-id=0%3A1">https://www.figma.com/proto/58G9sQxn2z7poMP3LtvAQ4/SCJ-Ecommerce?node-id=102%3A13&scaling=min-zoom&page-id=0%3A1</a>
                         </div>
                     </div>
                 </div>
