--- a/pages/ecomerce.html
+++ b/pages/ecomerce.html
@@ -35,7 +35,7 @@
         <div class="row">
             <!-- Title -->
             <div class="col text-center mt-4">
-                <h2>Res-Queue</h2>
+                <h2>Ecommerce Web design using Figma</h2>
             </div>
         </div>
     </div>
