--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <span
             class="txt-rotate typing"
             data-period="2000"
-            data-rotate='[  "HTML", "CSS", "Javascript", "JQuery" ]'
+            data-rotate='[  "HTML", "CSS", "Javascript", "JQuery", "PHP", "AJAX", "Wordpress" ]'
           >
           </span>
         </h2>
