--- a/index.html
+++ b/index.html
@@ -109,16 +109,11 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-7 gold-bg">
-          <h2 class="text-center text-light mt-3 text-uppercase">My Profile</h2>
+          <h2 class="text-light mt-3 text-uppercase">
+            My Personal Information
+          </h2>
           <div class="container-fluid">
             <div class="row">
-              <div class="col-xl text-center">
-                <img
-                  src="assets/img/2x2.png"
-                  class="img-thumbnail rounded-circle twobytwo"
-                  alt=""
-                />
-              </div>
               <div class="col-xl">
                 <div class="container-fluid">
                   <div class="row">
@@ -439,7 +434,7 @@
     <div class="container-fluid black-bg">
       <div class="row">
         <div class="col pt-3">
-          <p class="text-light">© 2022 SebastianJabson Portfolio</p>
+          <p class="text-light">© 2023 SebastianJabson Portfolio</p>
         </div>
       </div>
     </div>
