--- a/index.html
+++ b/index.html
@@ -224,8 +224,26 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-2 mt-1 mb-5">
+                    <div class="col-2 mt-1">
                       <h3>AJAX</h3>
+                    </div>
+                    <div class="col ml-3 mt-1">
+                      <div class="progress" style="height: 35px">
+                        <div
+                          class="progress-bar AJAX gold-bg"
+                          role="progressbar"
+                          aria-valuenow="90"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                        >
+                          90%
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-2 mt-1 mb-5">
+                      <h3>PHP</h3>
                     </div>
                     <div class="col ml-3 mt-1">
                       <div class="progress" style="height: 35px">
